crates/yokectl/tests/snapshots/preferences_json__effective_default.snap
---
source: crates/yokectl/tests/preferences_json.rs
expression: v
---
{
  "sub_profiles": [
    {
      "name": "Main",
      "preferences": {
        "volume": {
          "overridden": true,
          "value": "70"
        }
      },
      "sub_profile_index": 0
    }
  ],
  "top_level": {
    "volume": "55"
  }
}
