crates/yokectl/tests/snapshots/preferences_json__raw.snap
---
source: crates/yokectl/tests/preferences_json.rs
expression: v
---
{
  "sub_profiles": [
    {
      "name": "Main",
      "overrides": {
        "volume": "70"
      }
    }
  ],
  "top_level": {
    "volume": "55"
  }
}
